@@ -5,18 +5,18 @@
 
 #include <string>
 
-// // TODO: temporarily, to set DBG_MEASURE_TIME_FROM_IRQ_TO_USER
-// #include "linux-evrma.h"
-// 
-// #ifndef DBG_MEASURE_TIME_FROM_IRQ_TO_USER
-// #warning **********************************************************************
-// #warning **********************************************************************
-// #warning **********************************************************************
-// #warning Please, remove #include "linux-evrma.h" now that it is not needed anymore.
-// #warning **********************************************************************
-// #warning **********************************************************************
-// #warning **********************************************************************
-// #endif
+// TODO: temporarily, to set DBG_MEASURE_TIME_FROM_IRQ_TO_USER
+#include "linux-evrma.h"
+
+#ifndef DBG_MEASURE_TIME_FROM_IRQ_TO_USER
+#warning **********************************************************************
+#warning **********************************************************************
+#warning **********************************************************************
+#warning Please, remove #include "linux-evrma.h" now that it is not needed anymore.
+#warning **********************************************************************
+#warning **********************************************************************
+#warning **********************************************************************
+#endif
 
 #include "libevrma.h"
 #include "libevrma_dbg.h"
