@@ -1,6 +1,11 @@
  Release Notes for the evrma package
 -------------------------------------------
 
+
+evrma-R1-0-p4: 2015-11-18 S. Gruden
+	* Enabled DBG_MEASURE_TIME_FROM_IRQ_TO_USER.
+	* Path changes.
+
 evrma-R1-0-p3: 2015-11-13 S. Gruden
 	* adding multiple allocation of same output test to the automated procedure
 	* more debug code (for event tracing and timing)
